@@ -5,7 +5,10 @@ Please make entries to this log (in addition to the CVS log) that describe
 major changes to the OpenSLP code base.  An entries should be separated by
 blank lines and include the date, developer's email, and change description.
 =============================================================================
-04/04/02 matt@caldera.com
+04/26/02 matt@caldera.com
+Added version and length sanity checks for incoming messages 
+
+04/26/02 matt@caldera.com
 Fixed possible SEGV when logging DA traffic
 
 04/04/02 matt@caldera.com
